--- a/views/index.html
+++ b/views/index.html
@@ -5,20 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Preload assets -->
-  <link rel="preload" href="js/application.js" as="script">
-  <link rel="preload" href="img/logo.png" as="image">
-  <link rel="preload" href="img/clouds.png" as="image">
-  <link rel="preload" href="img/grass.png" as="image">
-  <link rel="preload" href="img/water.png" as="image">
+  <link rel="preload" href="/static/js/application.js" as="script">
+  <link rel="preload" href="/static/img/logo.png" as="image">
+  <link rel="preload" href="/static/img/clouds.png" as="image">
+  <link rel="preload" href="/static/img/grass.png" as="image">
+  <link rel="preload" href="/static/img/water.png" as="image">
   <link
   rel="preload"
-  href="/fonts/cairo.woff2"
+  href="/static/fonts/cairo.woff2"
   as="font"
   crossorigin
   >
   <link
   rel="preload"
-  href="/fonts/icons.woff"
+  href="/static/fonts/icons.woff"
   as="font"
   crossorigin
   >
@@ -32,7 +32,7 @@
       font-style: normal;
       font-weight: 400;
       src: local("Cairo"), local("Cairo-Regular"),
-      url("/fonts/cairo.woff2")
+      url("/static/fonts/cairo.woff2")
       format("woff2");
       unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
       U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193,
@@ -45,16 +45,15 @@
       font-weight: normal;
       font-style: normal;
       font-display: block;
-      src: url("/fonts/icons.woff")
+      src: url("/static/fonts/icons.woff")
       format("woff");
     }
   </style>
 
   <!-- -->
-  <link rel="icon" href="img/logo.png">
-
-  <link href="css/materialize.min.css" type="text/css" rel="stylesheet">
-  <link href="css/style.css" type="text/css" rel="stylesheet">
+  <link rel="icon" href="/static/img/logo.png">
+  <link href="/static/css/materialize.min.css" rel="stylesheet">
+  <link href="/static/css/style.css" rel="stylesheet">
 
   <!-- Website metadata -->
   <title>Flipstarter</title>
@@ -84,7 +83,7 @@
       <!-- Site header -->
       <header id="header" class="container row center">
         <h1 class="cols s12 m12 l12">
-          <img src="img/logo.png" alt="Flipstarter logotype">
+          <img src="/static/img/logo.png" alt="Flipstarter logotype">
           <span>Flipstarter</span>
         </h1>
         <p class="col s12 m12 l12" data-string="siteIntro"></p>
@@ -669,9 +668,9 @@ data-string="instructionLink"
 </template>
 
 <!-- Load the javascript as the last step to ensure fastest load time. -->
-<script src="js/application.js"></script>
+<script src="/static/js/application.js"></script>
 
 <!-- -->
-<audio src="snd/applause.mp3" id="applause"></audio>
+<audio src="https://backend.flipstarter.cash/snd/applause.mp3" id="applause"></audio>
 </body>
 </html>
