Handle form POST requests

--- a/views/create.html
+++ b/views/create.html
@@ -16,7 +16,7 @@
   <div class="container my-5">
     <h1>Create a campaign</h1>
 
-    <form>
+    <form method="POST" action="">
       <div class="form-group">
         <label for="title">Campaign title</label>
         <input required="" type="text" class="form-control" id="title" name="title">
