Remove flipstarter's data
This is to avoid confusion whether Flipstarter is supporting any
fundraiser.

Flipstarter does NOT endorse third-party campaigns.

--- a/views/index.html
+++ b/views/index.html
@@ -81,12 +81,10 @@
   <div class="grass">
     <div class="background">
       <!-- Site header -->
-      <header id="header" class="container row center">
+      <header class="container row center">
         <h1 class="cols s12 m12 l12">
-          <img src="/static/img/logo.png" alt="Flipstarter logotype">
-          <span>Flipstarter</span>
+          <span>My Campaign</span>
         </h1>
-        <p class="col s12 m12 l12" data-string="siteIntro"></p>
         <ul
         class="col s10 m10 l10 push-s1 push-m1 push-l1"
         style="display: flex; justify-content: center; text-align: left;"
@@ -482,106 +480,6 @@ data-string="instructionLink"
 </main>
 </div>
 </div>
-
-<!-- Site footer -->
-<footer class="page-footer green">
-  <div class="container">
-    <div class="row">
-      <div class="col l5 s12">
-        <h5 class="white-text" data-string="footerLabel"></h5>
-        <p class="grey-text text-lighten-4" data-string="footerText"></p>
-      </div>
-      <div class="col l2 m4 s4 offset-l1">
-        <h5 class="white-text" data-string="socialLabel"></h5>
-        <ul>
-          <li>
-            <a
-            class="white-text valign-wrapper"
-            href="https://twitter.com/flipstartercash"
-            >
-            <i class="icon-chat"></i>
-            &nbsp;
-            <span data-string="twitter"></span>
-          </a>
-        </li>
-        <li>
-          <a
-          class="white-text valign-wrapper"
-          href="https://read.cash/@flipstarter"
-          >
-          <i class="icon-info"></i>
-          &nbsp;
-          <span data-string="read.cash"></span>
-        </a>
-      </li>
-    </ul>
-  </div>
-  <div class="col l2 m4 s4">
-    <h5 class="white-text" data-string="contactLabel"></h5>
-    <ul>
-      <li>
-        <a
-        class="white-text valign-wrapper"
-        href="mailto:info@flipstarter.cash"
-        >
-        <i class="icon-email"></i>
-        &nbsp;
-        <span data-string="email"></span>
-      </a>
-    </li>
-    <li>
-      <a
-      class="white-text valign-wrapper"
-      href="mailto:security@flipstarter.cash"
-      >
-      <i class="icon-security"></i>
-      &nbsp;
-      <span data-string="security"></span>
-    </a>
-  </li>
-</ul>
-</div>
-<div class="col l2 m4 s4">
-  <h5 class="white-text" data-string="codeLabel"></h5>
-  <ul>
-    <li>
-      <a
-      class="white-text valign-wrapper"
-      href="https://gitlab.com/groups/flipstarter/-/issues"
-      >
-      <i class="icon-report_problem"></i>
-      &nbsp;
-      <span data-string="issues"></span>
-    </a>
-  </li>
-  <li>
-    <a
-    class="white-text valign-wrapper"
-    href="https://gitlab.com/flipstarter"
-    >
-    <i class="icon-code"></i>
-    &nbsp;
-    <span data-string="source"></span>
-  </a>
-</li>
-</ul>
-</div>
-</div>
-</div>
-<div class="footer-copyright">
-  <div class="container center" style="opacity: 0.65;">
-    <span data-string="copyright"></span>
-    <a
-    href="https://gitlab.com/emergent-reasons/funding-traction/blob/master/LICENSE"
-    style="
-    color: inherit;
-    border-bottom: 1px dashed rgba(256, 256, 256, 0.33);
-    "
-    data-string="license"
-    ></a>
-  </div>
-</div>
-</footer>
 
 <div id="languageSelector" class="fixed-action-btn">
   <b id="currentLanguage" data-string="changeLanguage"></b>
