Add campaign title to database

--- a/views/index.html
+++ b/views/index.html
@@ -83,7 +83,7 @@
       <!-- Site header -->
       <header class="container row center">
         <h1 class="cols s12 m12 l12">
-          <span>My Campaign</span>
+          <span id="campaignTitle"></span>
         </h1>
       </header>
 
