Handle proposal markdown file

--- a/views/create.html
+++ b/views/create.html
@@ -115,8 +115,12 @@
             <input required="" type="text" class="form-control" id="bch_address" name="bch_address">
           </div>
           <div class="form-group">
-            <label class="lead" for="description">Project Description <small>(Markdown Format Supported)</small></label>
-            <textarea class="form-control" id="description" name="description" rows="6"></textarea>
+            <label class="lead" for="abstract">Project Abstract <small>(Markdown Format Supported)</small></label>
+            <textarea class="form-control" id="abstract" name="abstract" rows="4"></textarea>
+          </div>
+          <div class="form-group">
+            <label class="lead" for="abstract">Project Proposal <small>(Markdown Format Supported)</small></label>
+            <textarea class="form-control" id="proposal" name="proposal" rows="4"></textarea>
           </div>
           <button type="submit" class="btn btn-primary btn-lg">Create</button>
         </form>
